syntax = "proto3";

import "global.proto";

option go_package = "./;proto";
option java_package = "com.github.go2o.rpc";

// APP服务
service AppService {
    // 保存APP产品
    rpc SaveProd (AppProdRequest) returns (Result) {
    }
    // 保存版本
    rpc SaveVersion (AppVersionRequest) returns (Result) {
    }
    // 获取产品信息
    rpc GetProd (AppId) returns (SAppProd) {
    }
    // 获取版本
    rpc GetVersion (AppVersionId) returns (SAppVersion) {
    }
    // 删除产品
    rpc DeleteProd (AppId) returns (Result) {
    }
    // 删除版本
    rpc DeleteVersion (AppVersionId) returns (Result) {
    }
    // 检测版本更新
    rpc CheckVersion (CheckVersionRequest) returns (CheckVersionResponse) {
    }
}

message AppId {
    int64 Value =  1;
}
message AppVersionId {
    int64 Value =  1;
}

// 检查版本请求
message CheckVersionRequest {
    // 版本号
    int64 appId = 1;
    // 更新通道, stable|beta|nightly
    string channel = 2;
    // 当前版本
    string version = 3;
}

// 检测版本响应结果
message CheckVersionResponse {
    // 最新版本号
    string latest_version = 1;
    // App更新资源地址
    string app_pkg_url = 2;
    // 版本信息
    string version_info = 3;
    // 是否为最新版本
    bool is_latest = 4;
    // 是否强制升级
    bool force_update = 5;
    // 更新文件类型,如APK,EXE,ZIP等
    string update_type= 6;
    // 发布时间
    int64 release_time = 7;
}

// APP产品
message AppProdRequest {
    // 产品编号
    int64 Id = 1;
    // 产品名称
    string prod_name = 2;
    // 产品描述
    string prod_des = 3;
    // Icon
    string icon = 4;
    // 发布下载页面地址
    string publish_url = 5;
    // 正式版文件地址
    string stable_file_url = 6;
    // 内测版文件地址
    string alpha_file_url = 8;
    // 每夜版文件地址
    string nightly_file_url = 10;
    // 更新方式,比如APK, EXE等
    string update_type= 11;
}

// APP版本
message AppVersionRequest {
    // 编号
    int64 Id = 1;
    // 产品
    int64 productId = 2;
    // 更新通道, stable:0|alpha:1|nightly:2
    int32 channel = 3;
    // 版本号
    string version = 4;
    // 是否强制升级
    bool force_update = 5;
    // 更新内容
    string update_content = 6;
}

// APP产品
message SAppProd {
    // 产品编号
    int64 Id = 1;
    // 产品名称
    string prod_name = 2;
    // 产品描述
    string prod_des = 3;
    // 最新的版本ID
    int64 latest_vid = 4;
    // 正式版文件hash值
    string md5_hash = 5;
    // 发布下载页面地址
    string publish_url = 6;
    // 正式版文件地址
    string stable_file_url = 7;
    // 内测版文件地址
    string alpha_file_url = 8;
    // 每夜版文件地址
    string nightly_file_url = 9;
    // 更新方式,比如APK, EXE等
    string update_type= 10;
    // 更新时间
    int64 UpdateTime = 11;
}

// APP版本
message SAppVersion {
    // 编号
    int64 Id = 1;
    // 产品
    int64 productId = 2;
    // 更新通道, 0:stable|1:beta|2:nightly
    int32 channel = 3;
    // 版本号
    string version = 4;
    // 数字版本
    int32 version_code = 5;
    // 是否强制升级
    bool force_update = 6;
    // 更新内容
    string update_content = 7;
    // 发布时间
    int64 create_time = 8;
}
